# data-pipeline-mother-duck

./: .gitignore  README.md  generate_token.py  main.py  pyproject.toml  test_pyspark.py  wq
.astro/: config.yaml
.github/workflows/: deploy-astro.yml  main.yml
dags/: etl_pipeline.py  my_frist_pipeline.py  pipeline_dbt.py  pipeline_placeholder.py
example_extract/: bussiness_logic.py  cleaning_data.py  config.py  data_quality.py  logs.py
include/.dbt/: profiles.yml
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
transform/: .user.yml  dbt_project.yml
transform/macros/: generate_schema_name.sql
transform/models/bronze/: br_raw.sql
transform/models/gold/: gold_business.sql
transform/models/marts/: dim_posts_cleaned.sql  schema.yml
transform/models/silver/: schema.yml  sil_clean.sql
transform/models/sources/: sources.yml
transform/tests/: assert_fare_non_negative.sql  assert_trip_time_logic.sql
